infrastructure/configs/notifications-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: webhook-rate-limit
  namespace: flux-system
spec:
  rateLimit:
    average: 10 # requests per second
    burst: 20 # allowed burst
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: "flux-system-webhook-rate-limit@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: flux-webhook.x86.thephysicsflat.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - flux-webhook.x86.thephysicsflat.xyz
      secretName: notification-webhook-tls
